Memo example realm DB update.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,6 @@
     <string name="title">제목</string>
     <string name="summary">내용</string>
     <string name="edit_date">작성시간</string>
+
+    <string name="memo_hint">메모를 작성해주세요</string>
 </resources>
