Weather api example update commit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="action_share">공유</string>
     <string name="action_alarm">알람 설정</string>
     <string name="action_location">위치 설정</string>
+    <string name="action_weather">날씨 설정</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -107,6 +108,7 @@
     <string name="notice">안내</string>
     <string name="alarm_notice">기존에 알람이 설정되어 있습니다. 삭제 또는 재설정할 수 있습니다.</string>
     <string name="location_notice">현재 위치를 메모에 저장하거나 삭제할 수 있습니다.</string>
+    <string name="weather_notice">현재 날씨를 메모에 저장하거나 삭제할 수 있습니다.</string>
     <string name="update">재설정</string>
     <string name="delete">삭제</string>
 </resources>
