Contact example first commit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,10 @@
         <item>Content provider example</item>
     </array>
 
+    <array name="content_provider_example_array">
+        <item>Contact example</item>
+    </array>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
