Album example finished.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,16 @@
 
     <array name="content_provider_example_array">
         <item>Contact example</item>
+        <item>Album example</item>
     </array>
+
+    <string name="album_divider">|</string>
+
+    <string name="permission_dialog_title">Permission denied.</string>
+    <string name="permission_dialog_message">Please arrow permissions.</string>
+
+    <string name="setting">Setting</string>
+    <string name="cancel">Cancel</string>
 
     <string name="large_text">
         "Material is the metaphor.\n\n"
