--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
         <item>Room - Live Data example</item>
         <item>Content provider example</item>
         <item>Custom view example</item>
+        <item>Saved state view model example</item>
     </array>
 
     <array name="content_provider_example_array">
